<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LLHM"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityNewUser">


    <TextView
        android:id="@+id/textViewNewUserTitle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="\nNew User"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/LLH1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Full Name :"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLH2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Email:"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLH3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLH4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="Phone No:"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPhoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLH5"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroupActivity"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:checkedButton="@id/radioButtonActive">

            <RadioButton
                android:id="@+id/radioButtonActive"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Active" />

            <RadioButton
                android:id="@+id/radioButtonNotActive"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Not Active" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLH6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="User Name :"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextNewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLH7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNewUserPassword"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Password :"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextNewUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:textColor="@color/design_default_color_error"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/LLH8"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveNewUserButton"
            android:text="Save"
            android:textSize="20sp"
            android:backgroundTint="@color/botton"/>

    </LinearLayout>


</LinearLayout>